# ctx-sync

./: .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
src/ctx_sync/: __init__.py  cli.py  detectors.py  models.py  scorer.py  syncer.py
src/ctx_sync/parsers/: __init__.py  _markdown.py  agents_md.py  claude_md.py  copilot.py  cursor_mdc.py  cursorrules.py
src/ctx_sync/renderers/: __init__.py  agents_md.py  claude_md.py  copilot.py  cursorrules.py
tests/fixtures/sample-agents-md/: AGENTS.md
tests/fixtures/sample-claude-md/: CLAUDE.md
tests/fixtures/sample-cursorrules/: .cursorrules
